Correction pour installDist